--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>3.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>4.4.3</version>
+        </dependency>
 
         <dependency>
             <groupId>com.mysql</groupId>
