--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,7 @@ spring:
     url: jdbc:mysql://localhost:3306/bwlist
     username: root
     password: 123456
+  data:
+    redis:
+      port: 6379
+      host: localhost
